fix ABOUT social links layout on mobile

--- a/src/sass/1-base/_globals.sass
+++ b/src/sass/1-base/_globals.sass
@@ -25,6 +25,10 @@ textarea
 .italic
 	font-style: italic
 
+@media (max-width: $xs-max)
+	.no-mobile
+		display: none
+
 @media (min-width: 992px)
 	.mobile-only
 		display: none
